--- a/app/views/pages/story.html.erb
+++ b/app/views/pages/story.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#story</h1>
-<p>Find me in app/views/pages/story.html.erb</p>
+<% provide(:title, 'Our Story') %>
+<h1>Our Story</h1>
+<p>
+  Story page.
+</p>
