--- a/app/views/pages/party.html.erb
+++ b/app/views/pages/party.html.erb
@@ -3,4 +3,18 @@
 <p>
       Wedding Party.
 </p>
-
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span1">
+		</div>
+		<div class="span5">
+			<div class="party photo">
+				
+		</div>
+		<div class="span5">
+			<p>test</p>
+		</div>
+		<div class="span1">
+		</div>
+	</div>
+</div>
