--- a/app/views/pages/ceremony.html.erb
+++ b/app/views/pages/ceremony.html.erb
@@ -3,3 +3,6 @@
 <p>
   Ceremony Page
 </p>
+<div class="map">
+	<iframe width="640" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?sll=29.80349439991064,-82.58972448687257&amp;sspn=0.10621236635627698,0.21976560811859322&amp;t=h&amp;q=bella+collina&amp;dg=opt&amp;ie=UTF8&amp;hq=bella+collina&amp;ll=28.582035,-81.689272&amp;spn=0.018089,0.027466&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?sll=29.80349439991064,-82.58972448687257&amp;sspn=0.10621236635627698,0.21976560811859322&amp;t=h&amp;q=bella+collina&amp;dg=opt&amp;ie=UTF8&amp;hq=bella+collina&amp;ll=28.582035,-81.689272&amp;spn=0.018089,0.027466&amp;z=15&amp;iwloc=A&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+</div>
