--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,8 @@
-<% provide(:title, 'Home') %>
-<h1>Carly & Cory</h1>
-<p>
-  Home page.
-</p>
+<%= image_tag("Main.jpg", alt: "Carly & Cory", :class => "mainPhoto") %>
+
+<!-- <div class="center hero-unit">
+	<h1>Carly & Cory</h1>
+	<p>
+  	Home page.
+	</p>
+</div> -->
