--- a/app/views/pages/ceremony.html.erb
+++ b/app/views/pages/ceremony.html.erb
@@ -1,8 +1,5 @@
 <% provide(:title, 'Ceremony') %>
 <h1>Ceremony</h1>
-<p>
-  Ceremony Page
-</p>
 <div class="map">
-	<iframe width="640" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?sll=29.80349439991064,-82.58972448687257&amp;sspn=0.10621236635627698,0.21976560811859322&amp;t=h&amp;q=bella+collina&amp;dg=opt&amp;ie=UTF8&amp;hq=bella+collina&amp;ll=28.582035,-81.689272&amp;spn=0.018089,0.027466&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?sll=29.80349439991064,-82.58972448687257&amp;sspn=0.10621236635627698,0.21976560811859322&amp;t=h&amp;q=bella+collina&amp;dg=opt&amp;ie=UTF8&amp;hq=bella+collina&amp;ll=28.582035,-81.689272&amp;spn=0.018089,0.027466&amp;z=15&amp;iwloc=A&amp;source=embed" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+	<iframe width="800" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=bella+collina+golf+club&amp;aq=&amp;sll=28.582261,-81.686611&amp;sspn=0.112001,0.16222&amp;ie=UTF8&amp;hq=bella+collina+golf+club&amp;hnear=&amp;ll=28.582261,-81.686611&amp;spn=0.112001,0.16222&amp;t=m&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=bella+collina+golf+club&amp;aq=&amp;sll=28.582261,-81.686611&amp;sspn=0.112001,0.16222&amp;ie=UTF8&amp;hq=bella+collina+golf+club&amp;hnear=&amp;ll=28.582261,-81.686611&amp;spn=0.112001,0.16222&amp;t=m" style="color:#1A2043;text-align:left">View Larger Map</a></small>
 </div>
