--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,29 @@
 <%= image_tag("Main.jpg", alt: "Carly & Cory", :class => "mainPhoto") %>
 
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span1">
+		</div>
+		<div class="span4">
+			<div><h3>Her</h3><h3 class="hidden">?</h3>
+			</div>
+			<div class="carlyPhoto">
+			</div>
+				<p>My name is Carly and I am really cool.</p>
+		</div>
+		<div class="span2">
+		</div>
+		<div class="span4">
+			<h3>Him</h3>
+			<div class="coryPhoto">
+			</div>
+			<p></p>
+		</div>
+		<div class="span1">
+		</div>
+	</div>
+</div>
+
 <!-- <div class="center hero-unit">
 	<h1>Carly & Cory</h1>
 	<p>
