--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -1,5 +1,11 @@
 <% provide(:title, 'Registry') %>
 <h1>Registry</h1>
 <div class="registry">
+	<a href="http://m.macys.com/registry/wedding/guest/?registryId=2100476" target="_blank">Macy's</a>
+	<br>
+	</br>
+	<a href="http://www.kohls.com/upgrade/gift_registry/kohlsgrw_home.jsp?section=list&listid=2549751&viewtype=listview&isfromsearch=true&fname=carly&lname=sewell&regtype=registry.wedding,registry.baby,registry.splday" target="_blank">Kohl's</a>
+	<br>
+	</br>
 	<a href="http://www.amazon.com/gp/wedding/homepage" target="_blank">AMAZON</a>
 </div>
