--- a/app/views/pages/ceremony.html.erb
+++ b/app/views/pages/ceremony.html.erb
@@ -1,5 +1,21 @@
 <% provide(:title, 'Ceremony') %>
+
+<%= image_tag("Ceremony.jpg", alt: "Carly & Cory", :class => "headerPhoto") %>
+
 <h1>Ceremony</h1>
+
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span8">
+			<p id="ceremonyText">
+			  The ceremony will begin at 4 pm on the lawn. Dinner and dancing to follow.
+			</p>
+
+		</div>
+	</div>
+</div>
 <div class="map">
 	<iframe width="800" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=bella+collina+golf+club&amp;aq=&amp;sll=28.582261,-81.686611&amp;sspn=0.112001,0.16222&amp;ie=UTF8&amp;hq=bella+collina+golf+club&amp;hnear=&amp;ll=28.582261,-81.686611&amp;spn=0.112001,0.16222&amp;t=m&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=bella+collina+golf+club&amp;aq=&amp;sll=28.582261,-81.686611&amp;sspn=0.112001,0.16222&amp;ie=UTF8&amp;hq=bella+collina+golf+club&amp;hnear=&amp;ll=28.582261,-81.686611&amp;spn=0.112001,0.16222&amp;t=m" style="color:#1A2043;text-align:left">View Larger Map</a></small>
 </div>
