--- a/app/views/pages/party.html.erb
+++ b/app/views/pages/party.html.erb
@@ -1,20 +1,176 @@
 <% provide(:title, 'Wedding Party') %>
+
+<%= image_tag("Party2.jpg", alt: "Carly & Cory", :class => "headerPhoto") %>
+
 <h1>Wedding Party</h1>
-<p>
-      Wedding Party.
-</p>
+<h2>Bridesmaids</h2>
 <div class="container-fluid">
 	<div class="row-fluid">
-		<div class="span1">
+		<div class="span2">
 		</div>
-		<div class="span5">
-			<div class="party photo">
-				
+		<div class="span3">
+			<%= image_tag("Stacy.jpg", alt: "", :class => "party") %>
 		</div>
-		<div class="span5">
-			<p>test</p>
+		<div class="span2">
 		</div>
-		<div class="span1">
+		<div class="span3">
+			<h3>Stacy Sewell</h3>
+			<p class="partyText">Sister and best friend. The best maid of honor in the world. Thankful for her constant friendship. Could not have hand picked a better sister!</p>
+		</div>
+		<div class="span2">
+		</div>
+	</div>
+	<br></br>
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<%= image_tag("Jess.jpg", alt: "", :class => "party") %>
+		</div>
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<h3>Jess Wardell</h3>
+			<p class="partyText">Best friend. Co-Paris traveler. Incredible teacher and wife. Has a beautiful heart for the Lord and for children.</p>
+		</div>
+		<div class="span2">
+		</div>
+	</div>
+	<br></br>
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<%= image_tag("Leah.jpg", alt: "", :class => "party") %>
+		</div>
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<h3>Leah Zipper</h3>
+			<p class="partyText">An old roomie and best friend. Lover of Jesus, fashion, cats, and Oscar. Party planner. Can make anyone laugh.</p>
+		</div>
+		<div class="span2">
+		</div>
+	</div>
+	<br></br>
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<%= image_tag("Melissa.jpg", alt: "", :class => "party") %>
+		</div>
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<h3>Melissa Allred</h3>
+			<p class="partyText">Cousin. Best Friend. Future mommy to Keaton Parker. Provides much joy and laughter to our family. Thankful Logan married you. ;)</p>
+		</div>
+		<div class="span2">
+		</div>
+	</div>
+	<br></br>
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<%= image_tag("Christin.jpg", alt: "", :class => "party") %>
+		</div>
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<h3>Christin Akin</h3>
+			<p class="partyText">Teacher and Friend. Newlywed. Encourager. Spiritual influence.</p>
+		</div>
+		<div class="span2">
+		</div>
+	</div>
+</div>
+<br></br>
+
+<h2>Groomsmen</h2>
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<div class="party">
+			</div>
+		</div>
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<h3>Tyler Mikell</h3>
+			<p class="partyText">This is a test nessage to see where the text will be placed on the page and how it has been broken up per on the page and things like that.</p>
+		</div>
+		<div class="span2">
+		</div>
+	</div>
+	<br></br>
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<div class="party">
+			</div>
+		</div>
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<h3>Ryan Delk</h3>
+			<p class="partyText">This is a test nessage to see where the text will be placed on the page and how it has been broken up per on the page and things like that.</p>
+		</div>
+		<div class="span2">
+		</div>
+	</div>
+	<br></br>
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<div class="party">
+			</div>
+		</div>
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<h3>Alex Duncan</h3>
+			<p class="partyText">This is a test nessage to see where the text will be placed on the page and how it has been broken up per on the page and things like that.</p>
+		</div>
+		<div class="span2">
+		</div>
+	</div>
+	<br></br>
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<div class="party">
+			</div>
+		</div>
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<h3>Jared Gore</h3>
+			<p class="partyText">This is a test nessage to see where the text will be placed on the page and how it has been broken up per on the page and things like that.</p>
+		</div>
+		<div class="span2">
+		</div>
+	</div>
+	<br></br>
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<div class="party">
+			</div>
+		</div>
+		<div class="span2">
+		</div>
+		<div class="span3">
+			<h3>?</h3>
+			<p class="partyText">This is a test nessage to see where the text will be placed on the page and how it has been broken up per on the page and things like that.</p>
+		</div>
+		<div class="span2">
 		</div>
 	</div>
 </div>
