--- a/app/views/pages/story.html.erb
+++ b/app/views/pages/story.html.erb
@@ -1,5 +1,22 @@
 <% provide(:title, 'Our Story') %>
+
+<%= image_tag("Our Story.jpg", alt: "Carly & Cory", :class => "headerPhoto") %>
+
 <h1>Our Story</h1>
-<p>
-  Story page.
-</p>
+
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span2">
+		</div>
+		<div class="span8">
+			<p class="storyText">
+			  It all started in 2010 with a college mission trip to Paris. We both felt called to go on the 6-week trip, where we would share our faith with college students in the very dark city of Paris. We had an incredible but challenging trip, and built a strong friendship while we were there. When we returned back to the US, we began to realize that there might just be more than a friendship between us. We started hanging out more and went on several dates. We “officially” began dating on September 15th of that year.
+			<br></br>
+			  Like all love stories, we’ve definitely had our share of wonderful and challenging days. But in the end, we love each other more than words can express and have such a great time just being together. On May 10th, 2013 Cory made me the happiest girl in the world by asking me to be his future wife! We cannot wait for our wedding on November 24th.
+			<br></br>
+			  We are so thankful the Lord brought us together and cannot wait to serve Him together as we start this new journey!
+			</p>
+
+		</div>
+	</div>
+</div>
