--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,21 @@
     <![endif]-->
   </head>
 <body>
+      <div class="navigationBar">
   		<div class="container">
   			<!-- <%= link_to "Carly & Cory", root_path, id: "logo" %> -->
-  			<nav>
-  				<ul class="nav nav-pills">
-  					<li class="active">
-            <li><%= link_to "Home",			     root_path %></li>
-  					<li><%= link_to "Our Story",		 story_path %></li>
-  					<li><%= link_to "Ceremony",		   ceremony_path %></li>
-  					<li><%= link_to "Wedding Party", party_path %></li>
-  					<li><%= link_to "Registry",			 registry_path %></li>
-  					<li><%= link_to "RSVP",			     rsvp_path %></li>
-  				</ul>
-  			</nav>
+          <nav>
+    				<ul class="nav nav-pills clear">
+    					<li class="active">
+              <li><%= link_to "Home",			     root_path %></li>
+    					<li><%= link_to "Our Story",		 story_path %></li>
+    					<li><%= link_to "Ceremony",		   ceremony_path %></li>
+    					<li><%= link_to "Wedding Party", party_path %></li>
+    					<li><%= link_to "Registry",			 registry_path %></li>
+    					<li><%= link_to "RSVP",			     rsvp_path %></li>
+    				</ul>
+    			</nav>
+      </div>
   		</div>
   </div class="container">
 	<%= yield %>
