--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,25 +1,26 @@
-<%= image_tag("Main.jpg", alt: "Carly & Cory", :class => "mainPhoto") %>
+<%= image_tag("Main2.jpg", alt: "Carly & Cory", :class => "mainPhoto") %>
 
 <div class="container-fluid">
 	<div class="row-fluid">
-		<div class="span1">
+		<div class="span2">
 		</div>
-		<div class="span4">
-			<div><h3>Her</h3><h3 class="hidden">?</h3>
-			</div>
+		<div class="span3">
 			<div class="carlyPhoto">
+			</div>
+			<div id="Her"><h3>Her</h3><h3 class="hidden">?</h3>	
 			</div>
 				<p>My name is Carly and I am really cool.</p>
 		</div>
 		<div class="span2">
 		</div>
-		<div class="span4">
-			<h3>Him</h3>
+		<div class="span3">
 			<div class="coryPhoto">
 			</div>
-			<p></p>
+			<div id="Him"><h3>Him</h3>
+			</div>
+			<p>Cory is a 23 year old, smart, witty, and good looking man who happens to be my future husband (how did I get so lucky?)! He enjoys good movies, sweet tea, golfing, and America. His adventurous and curious spirit will always keep us entertained.</p>
 		</div>
-		<div class="span1">
+		<div class="span2">
 		</div>
 	</div>
 </div>
