--- a/app/views/pages/party.html.erb
+++ b/app/views/pages/party.html.erb
@@ -93,14 +93,13 @@
 		<div class="span2">
 		</div>
 		<div class="span3">
-			<div class="party">
-			</div>
+			<%= image_tag("Tyler.JPG", alt: "", :class => "party") %>
 		</div>
 		<div class="span2">
 		</div>
 		<div class="span3">
 			<h3>Tyler Mikell</h3>
-			<p class="partyText">This is a test nessage to see where the text will be placed on the page and how it has been broken up per on the page and things like that.</p>
+			<p class="partyText">My brother has been with me through it all. We played every sport together, had the same friends, and wore matching clothes (thanks mom and dad). Couldn't imagine life without this guy.</p>
 		</div>
 		<div class="span2">
 		</div>
@@ -110,14 +109,13 @@
 		<div class="span2">
 		</div>
 		<div class="span3">
-			<div class="party">
-			</div>
+			<%= image_tag("Ryan.jpg", alt: "", :class => "party") %>
 		</div>
 		<div class="span2">
 		</div>
 		<div class="span3">
 			<h3>Ryan Delk</h3>
-			<p class="partyText">This is a test nessage to see where the text will be placed on the page and how it has been broken up per on the page and things like that.</p>
+			<p class="partyText">To this day, Carly questions whether I would rather talk with her or Ryan. He is one person who will tell me what I need to hear, not just what I want to hear. Excited to start this next phase of life at the same time.</p>
 		</div>
 		<div class="span2">
 		</div>
@@ -127,14 +125,13 @@
 		<div class="span2">
 		</div>
 		<div class="span3">
-			<div class="party">
-			</div>
+			<%= image_tag("Alex.jpg", alt: "", :class => "party") %>
 		</div>
 		<div class="span2">
 		</div>
 		<div class="span3">
 			<h3>Alex Duncan</h3>
-			<p class="partyText">This is a test nessage to see where the text will be placed on the page and how it has been broken up per on the page and things like that.</p>
+			<p class="partyText">My favorite Canadian. When Alex moved to Gainesville his Junior year of college, we became instant friends. He introduced me to his joys in life: Arrested Development and Chili's.</p>
 		</div>
 		<div class="span2">
 		</div>
@@ -144,33 +141,16 @@
 		<div class="span2">
 		</div>
 		<div class="span3">
-			<div class="party">
-			</div>
+			<%= image_tag("Bubba.jpg", alt: "", :class => "party") %>
 		</div>
 		<div class="span2">
 		</div>
 		<div class="span3">
 			<h3>Jared Gore</h3>
-			<p class="partyText">This is a test nessage to see where the text will be placed on the page and how it has been broken up per on the page and things like that.</p>
+			<p class="partyText">This is my cousin "Bubba". From as far back as I can remember he always took care of me and let me tag along with whatever he was doing. He even picked the smallest, slowest cousin to be his backyard football partner.</p>
 		</div>
 		<div class="span2">
 		</div>
 	</div>
-	<br></br>
-	<div class="row-fluid">
-		<div class="span2">
-		</div>
-		<div class="span3">
-			<div class="party">
-			</div>
-		</div>
-		<div class="span2">
-		</div>
-		<div class="span3">
-			<h3>?</h3>
-			<p class="partyText">This is a test nessage to see where the text will be placed on the page and how it has been broken up per on the page and things like that.</p>
-		</div>
-		<div class="span2">
-		</div>
-	</div>
+	
 </div>
