--- a/app/views/pages/ceremony.html.erb
+++ b/app/views/pages/ceremony.html.erb
@@ -9,8 +9,17 @@
 		<div class="span2">
 		</div>
 		<div class="span8">
+			<h2>November 24, 2013</h2>
 			<p id="ceremonyText">
-			  The ceremony will begin at 4 pm on the lawn. Dinner and dancing to follow.
+			  4:00 pm – Cory and Carly tie the knot on the Grand Lawn.
+			  <br>
+			  4:45 pm – Cocktail hour around the Bell Tower.
+			  <br>
+			  5:45 pm – The new Mr. & Mrs. Mikell make their entrance on the Grand Lawn.
+			  <br>
+			  6:00 pm – Dinner, dancing, and cake.
+			  <br>
+			  10:00 pm – Send off the newlyweds!
 			</p>
 
 		</div>
