--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,20 +5,18 @@
 		<div class="span2">
 		</div>
 		<div class="span3">
-			<div class="carlyPhoto">
+			<%= image_tag("Cory.jpg", alt: "", :class => "coryPhoto") %>
+			<div id="Him"><h3>Him</h3>
 			</div>
-			<div id="Her"><h3>Her</h3><h3 class="hidden">?</h3>	
-			</div>
-				<p>My name is Carly and I am really cool.</p>
+			<p class="homeText">Cory is a 23 year old, smart, witty, and good looking man who happens to be my future husband (how did I get so lucky?)! He enjoys good movies, sweet tea, golfing, and America. His adventurous and curious spirit will always keep us entertained.</p>
 		</div>
 		<div class="span2">
 		</div>
 		<div class="span3">
-			<div class="coryPhoto">
+			<%= image_tag("Carly.jpg", alt: "", :class => "carlyPhoto") %>
+			<div id="Her"><h3>Her</h3><h3 class="hidden">?</h3>	
 			</div>
-			<div id="Him"><h3>Him</h3>
-			</div>
-			<p>Cory is a 23 year old, smart, witty, and good looking man who happens to be my future husband (how did I get so lucky?)! He enjoys good movies, sweet tea, golfing, and America. His adventurous and curious spirit will always keep us entertained.</p>
+				<p class="homeText">Carly is full of life. She loves people, planning events, and teaching children. She has a special gift of laughing at my lame jokes, falling asleep during movies, taking care of me (full time job), and being my best friend. There is never a dull moment with this girl.</p>
 		</div>
 		<div class="span2">
 		</div>
