--- a/app/views/pages/party.html.erb
+++ b/app/views/pages/party.html.erb
@@ -15,7 +15,7 @@
 		</div>
 		<div class="span3">
 			<h3>Stacy Sewell</h3>
-			<p class="partyText">Sister and best friend. The best maid of honor in the world. Thankful for her constant friendship. Could not have hand picked a better sister!</p>
+			<p class="partyText">This is my sister and best friend. We have been through everything together. She is the best maid of honor in the world. I am beyond thankful for her constant friendship. Could not have hand picked a better sister!</p>
 		</div>
 		<div class="span2">
 		</div>
@@ -31,7 +31,7 @@
 		</div>
 		<div class="span3">
 			<h3>Jess Wardell</h3>
-			<p class="partyText">Best friend. Co-Paris traveler. Incredible teacher and wife. Has a beautiful heart for the Lord and for children.</p>
+			<p class="partyText">Jess is a best friend from college. We traveled to Paris together, and she was there for the beginning stages of my relationship with Cory. She is an incredible teacher, wife, and has a beautiful heart for the Lord.</p>
 		</div>
 		<div class="span2">
 		</div>
@@ -47,7 +47,7 @@
 		</div>
 		<div class="span3">
 			<h3>Leah Zipper</h3>
-			<p class="partyText">An old roomie and best friend. Lover of Jesus, fashion, cats, and Oscar. Party planner. Can make anyone laugh.</p>
+			<p class="partyText">Leah is an old roomie and best friend. We have a lot of memories together in the Haile Mansion. She is a lover of Jesus, fashion, cats, and Oscar. Leah has always been an encouragement to me and I am thankful for her influence on my life.</p>
 		</div>
 		<div class="span2">
 		</div>
@@ -63,7 +63,7 @@
 		</div>
 		<div class="span3">
 			<h3>Melissa Allred</h3>
-			<p class="partyText">Cousin. Best Friend. Future mommy to Keaton Parker. Provides much joy and laughter to our family. Thankful Logan married you. ;)</p>
+			<p class="partyText">Melissa is a wonderful cousin and best friend. She provides much joy and laughter to our family. I am so thankful Logan married you and cannot wait to meet your baby boy. ;)</p>
 		</div>
 		<div class="span2">
 		</div>
@@ -79,7 +79,7 @@
 		</div>
 		<div class="span3">
 			<h3>Christin Akin</h3>
-			<p class="partyText">Teacher and Friend. Newlywed. Encourager. Spiritual influence.</p>
+			<p class="partyText">Christin is a fellow teacher and best friend from my college years at UF. I am thankful we had the opportunity to work together after college. She is an encouragement to all and has been a spiritual influence in my life.</p>
 		</div>
 		<div class="span2">
 		</div>
