--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,5 +30,6 @@
 	<%= yield %>
   <%= render 'layouts/footer' %>
   </div>
+  <%= render :partial => ‘layouts/ga’ if RAILS_ENV == ‘production’ %>
 </body>
 </html>
