--- a/app/views/pages/ceremony.html.erb
+++ b/app/views/pages/ceremony.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Ceremony') %>
 
-<%= image_tag("Ceremony.jpg", alt: "Carly & Cory", :class => "headerPhoto") %>
+<%= image_tag("Ceremony.jpg", alt: "", :class => "headerPhoto") %>
 
 <h1>Ceremony</h1>
 
