--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag("Main2.jpg", alt: "Carly & Cory", :class => "mainPhoto") %>
+<%= image_tag("Main2.jpg", alt: "", :class => "mainPhoto") %>
 
 <div class="container-fluid">
 	<div class="row-fluid">
