--- a/app/views/pages/party.html.erb
+++ b/app/views/pages/party.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Wedding Party') %>
 
-<%= image_tag("Party2.jpg", alt: "Carly & Cory", :class => "headerPhoto") %>
+<%= image_tag("Party2.jpg", alt: "", :class => "headerPhoto") %>
 
 <h1>Wedding Party</h1>
 <h2>Bridesmaids</h2>
