--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Registry') %>
 
-<%= image_tag("Registry.jpg", alt: "Carly & Cory", :class => "headerPhoto") %>
+<%= image_tag("Registry.jpg", alt: "", :class => "headerPhoto") %>
 
 <h1>Registry</h1>
 
