--- a/app/views/pages/story.html.erb
+++ b/app/views/pages/story.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Our Story') %>
 
-<%= image_tag("Our Story.jpg", alt: "Carly & Cory", :class => "headerPhoto") %>
+<%= image_tag("Our Story.jpg", alt: "", :class => "headerPhoto") %>
 
 <h1>Our Story</h1>
 
