--- a/app/views/rsvp/new.html.erb
+++ b/app/views/rsvp/new.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'RSVP') %>
 
-<%= image_tag("RSVP.jpg", alt: "Carly & Cory", :class => "headerPhoto") %>
+<%= image_tag("RSVP.jpg", alt: "", :class => "headerPhoto") %>
 
 <h1>RSVP</h1>
 
