--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,12 +30,6 @@ textarea {
 
 /* Navigation */
 
-.nav ul li a {
-	display: block;
-    float: left;
-    position: relative;
-    right: 50%;}
-
 .nav-pills li{
     display:inline;
 }
@@ -54,6 +48,7 @@ textarea {
 .nav {
 	position: fixed;
 	width: 100%;
+	margin-left: 5%;
 	bottom: -2px;
 	text-align: center;
 	display: inline-block;
