--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -16,7 +16,7 @@
 				<%= link_to image_tag("Kohl's.png", alt: "Kohl's", :class => "kohlsPhoto"), "http://www.kohls.com/upgrade/gift_registry/kohlsgrw_home.jsp?section=list&listid=2549751&viewtype=listview&isfromsearch=true&fname=carly&lname=sewell&regtype=registry.wedding,registry.baby,registry.splday", :target => "_blank" %>
 				<br>
 				</br>
-				<%= link_to image_tag("target.jpg", alt: "Target", :class => "targetPhoto"), "http://www.target.com", :target => "_blank" %>
+				<%= link_to image_tag("target.jpg", alt: "Target", :class => "targetPhoto"), "http://www.target.com/GiftRegistrySearchViewCmd?registryType=WD&jsRequest=true&catalogId=10051&status=completePage&cumulativeTime=-1&listId=zvMtN_3wHgcWL6Ljg2tSuQ&noOfPings=&registryFirstName=cory&langId=-1&segmentGrpName=H&storeId=10151&registryLastName=mikell", :target => "_blank" %>
 			</div>
 		</div>
 	</div>
