--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -258,6 +258,12 @@ p {
 	background-color: #EBEBE2;
 }
 
+.formDirections {
+	font-size: 0.8em;
+  	line-height: 0.8em;
+  	text-align: center;
+}
+
 
 
 /* Footer */
