--- a/app/views/rsvp/new.html.erb
+++ b/app/views/rsvp/new.html.erb
@@ -7,6 +7,7 @@
 <div class="container">
   <div class="row">
   <div class="span6">
+    <p class="formDirections">*All fields required</p>
 <%= form_for @message, :url => rsvp_path, :html => {:class => "form-horizontal"} do |form| %>
   <fieldset>
 
